Code changes towards test integration + mocks added
